@@ -20,29 +20,9 @@ name|java
 operator|.
 name|util
 operator|.
-name|Locale
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|concurrent
 operator|.
 name|CountDownLatch
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|TimeUnit
 import|;
 end_import
 begin_import
@@ -228,6 +208,92 @@ name|convert
 operator|>
 literal|1000l
 argument_list|)
+expr_stmt|;
+block|}
+comment|// LUCENE-6075
+DECL|method|testOverflowInt
+specifier|public
+name|void
+name|testOverflowInt
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Thread
+name|t
+init|=
+operator|new
+name|Thread
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+operator|new
+name|SimpleRateLimiter
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|pause
+argument_list|(
+call|(
+name|long
+call|)
+argument_list|(
+literal|1.5
+operator|*
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|*
+literal|1024
+operator|*
+literal|1024
+operator|/
+literal|1000
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"should have been interrupted"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ThreadInterruptedException
+name|tie
+parameter_list|)
+block|{
+comment|// expected
+block|}
+block|}
+block|}
+decl_stmt|;
+name|t
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|t
+operator|.
+name|interrupt
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|testThreads
